# reseden-master-spec

./: .gitignore  README.md  pyproject.toml
data/20260331/: chouzai_koui.json  comment.json  houmon_kango.json  houmon_kango_イ.json  houmon_kango_ウ.json  houmon_kango_エ.json  houmon_kango_オ.json  ika_shinryoukoui.json  iyakuhin.json  manifest.json  sections.debug.json  shika_shinryoukoui.json  shika_shinryoukoui_イ.json  shika_shinryoukoui_ウ.json  shika_shinryoukoui_エ.json  shika_shinryoukoui_オ.json  shika_shinryoukoui_カ.json  shika_shinryoukoui_キ.json  shika_shinryoukoui_ク.json  shika_shinryoukoui_ケ.json  shika_shinryoukoui_コ.json  shishiki.json  shoubyomei.json  shushokugo.json  tokutei_kizai.json
data/20260501/: chouzai_koui.json  comment.json  houmon_kango.json  houmon_kango_イ.json  houmon_kango_ウ.json  houmon_kango_エ.json  houmon_kango_オ.json  ika_shinryoukoui.json  iyakuhin.json  manifest.json  nayose.json  sections.debug.json  shika_shinryoukoui.json  shika_shinryoukoui_イ.json  shika_shinryoukoui_ウ.json  shika_shinryoukoui_エ.json  shika_shinryoukoui_オ.json  shika_shinryoukoui_カ.json  shika_shinryoukoui_キ.json  shika_shinryoukoui_ク.json  shika_shinryoukoui_ケ.json  shika_shinryoukoui_コ.json  shisetsu_kijun.json  shisetsu_kijun_chouzai.json  shisetsu_kijun_houmon_kango.json  shishiki.json  shoubyomei.json  shushokugo.json  tokutei_kizai.json
scripts/: cli.py  extract.py  text_supplement.py
src/reseden_master_spec/: SKILL.md  __init__.py  cli.py  extract.py  extract_appendix.py  manifest_io.py  text_supplement.py
